# FAST-Python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/A320/inputs/: InputAircraft.json  Mission.json
examples/AEA/inputs/: InputAircraft.json  Mission.json
examples/ATR42/inputs/: InputAircraft.json  Mission.json
examples/CeRAS/inputs/: InputAircraft.json  Mission.json
src/fast_python/: __init__.py  aircraft.py  analysis.py  atmosphere.py  battery.py  cases.py  compare.py  constraint.py  core.py  cost.py  data_struct.py  database.py  engine.py  history.py  io.py  main.py  markers.py  mission.py  native.py  oew.py  optimization.py  plotting.py  profiles.py  projection.py  propulsion.py  reference.py  regression.py  retrofit.py  safety.py  specs.py  units.py
tests/: conftest.py  test_analysis.py  test_battery.py  test_cases.py  test_compare.py  test_constraint.py  test_cost.py  test_data_struct.py  test_database.py  test_engine.py  test_history.py  test_io.py  test_matlab_aircraft_specs_parity.py  test_matlab_battery_parity.py  test_matlab_engine_specs_parity.py  test_matlab_fixture.py  test_matlab_mission_profiles_parity.py  test_matlab_mission_segs_parity.py  test_matlab_output_aircraft_parity.py  test_mission_segments.py  test_native_utilities.py  test_oew.py  test_optimization.py  test_plotting.py  test_profiles.py  test_projection.py  test_propulsion.py  test_reference_backend.py  test_regression.py  test_retrofit.py  test_safety.py  test_specs.py
