[project]
name = "fast-python"
version = "0.1.0"
description = "Python implementation layer for the Future Aircraft Sizing Tool."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pytest>=8",
]

[project.scripts]
fast-python = "fast_python.main:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fast_python = ["data/*.zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
